# projects_manager

./: README.md
file_manager/: Cargo.toml  pyproject.toml
file_manager/project_manager/: Projects Manager.spec  constants.py  main.py  project_manager.ui  requirements.txt  temp.ui
file_manager/src/: constants.rs  file_iterator.rs  lib.rs
